bouton de tri+ page login

--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/index.html
@@ -19,8 +19,8 @@
             <nav>
                 <ul>
                     <li>projets</li>
-                    <li>contact</li>
-                    <li>login</li>
+                    <li><a href="#contact">contact</a></li>
+                    <li><a href="login.html" id="pageLogin">login</a></li>
                     <li>
                         <img
                             src="./assets/icons/instagram.png"
@@ -58,6 +58,7 @@
             </section>
             <section id="portfolio">
                 <h2>Mes Projets</h2>
+                <div id="buttonsContainer"></div>
                 <div class="gallery"></div>
             </section>
             <section id="contact">
@@ -88,5 +89,6 @@
             </nav>
         </footer>
         <script src="../Backend/assets/index.js"></script>
+        <script src="../Backend/assets/login.js"></script>
     </body>
 </html>
